--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 awsebcli==3.20.10
+bcrypt==4.1.3
 blessed==1.20.0
 blinker==1.8.2
 botocore==1.31.85
@@ -9,6 +10,7 @@ click==8.1.7
 colorama==0.4.3
 Flask==3.0.3
 Flask-Cors==4.0.1
+Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
 idna==3.7
@@ -19,6 +21,7 @@ MarkupSafe==2.1.5
 pathspec==0.10.1
 PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 PyYAML==6.0.1
 requests==2.32.3
 semantic-version==2.8.5
