--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,58 @@
+aiohttp==3.9.5
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.4.0
+async-timeout==4.0.3
+attrs==23.2.0
 awsebcli==3.20.10
 bcrypt==4.1.3
+beautifulsoup4==4.12.3
 blessed==1.20.0
 blinker==1.8.2
 botocore==1.31.85
+bs4==0.0.2
 cement==2.8.2
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.3
+dataclasses-json==0.6.7
+distro==1.9.0
+exceptiongroup==1.2.2
 Flask==3.0.3
+Flask-Bcrypt==1.0.1
 Flask-Cors==4.0.1
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+frozenlist==1.4.1
 greenlet==3.0.3
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
 jmespath==1.0.1
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.2.9
+langchain-community==0.2.7
+langchain-core==0.2.21
+langchain-text-splitters==0.2.2
+langsmith==0.1.90
 MarkupSafe==2.1.5
+marshmallow==3.21.3
+multidict==6.0.5
+mypy-extensions==1.0.0
+numpy==1.26.4
+openai==1.35.14
+orjson==3.10.6
+packaging==24.1
 pathspec==0.10.1
+pinecone==4.0.0
+pydantic==2.8.2
+pydantic_core==2.20.1
 PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -26,10 +60,16 @@ PyYAML==6.0.1
 requests==2.32.3
 semantic-version==2.8.5
 six==1.16.0
+sniffio==1.3.1
+soupsieve==2.5
 SQLAlchemy==2.0.31
+tenacity==8.5.0
 termcolor==1.1.0
+tqdm==4.66.4
+typing-inspect==0.9.0
 typing_extensions==4.12.2
 urllib3==1.26.19
 wcwidth==0.1.9
 Werkzeug==3.0.3
 WTForms==3.1.2
+yarl==1.9.4
